Anahi is AMAZING

--- a/AOportfolio.html
+++ b/AOportfolio.html
@@ -18,7 +18,7 @@
             I've researched the origin of the name "Anahi", I found out it has Persian roots and means "immortal". 
             I think that's pretty badass. 
         </p><br>
-        <p>Anahi was born in Chicago and grew up in Humboldt Park. Both of my parents immigrated from Mexico, 
+        <p>I was born in Chicago and grew up in Humboldt Park. Both of my parents immigrated from Mexico, 
             making me first generation Mexican-American. I</p>
     <h2></h2>
 </body>
