--- a/AOportfolio.html
+++ b/AOportfolio.html
@@ -19,7 +19,36 @@
             I think that's pretty badass. 
         </p><br>
         <p>I was born in Chicago and grew up in Humboldt Park. Both of my parents immigrated from Mexico, 
-            making me first generation Mexican-American. I</p>
-    <h2></h2>
+            making me first generation Mexican-American. I have a huge family with a BUNCH of cousins; over 30.</p><br>
+        <p>I big hobby of mine is painting. I started off with just drawing and then picked up watercolors more seriously
+            about 7 years ago. So I have a pretty cool colletion of art supplies. I realized the reason 
+            I like painting so much, is because it is truly the only time my brain shuts <B>EVERYTHING</B> out.
+            I do not think about drama. I do not have ruminating thoughts. It's just me in my own little world
+            with colors.
+        </p><br>
+    <h2>I Love Traveling !</h2>
+        <p>I know it probably sounds a bit cliche or eye-rolling to hear someone say they love to travel,
+            but the reason why I love it is because it has truly opened my mind and eyes and has made me a better person
+            in a way. I am grateful in way I cannot begin to describe for the experiences I've had with the people from
+            the countries I've been to.<br>
+            <b>Here is a list of the countries I've visited:</b>
+            <ul>
+                <li>Mexico</li>
+                <li>Canada</li>
+                <li>Italy</li>
+                <li>Austria</li>
+                <li>Germany</li>
+                <li>Slovenia</li>
+                <li>France</li>
+                <li>England</li>
+                <li>San Marino (it's a small country in the middle Italy, they speak Italian,
+                    but they don't consider themselves Italian...)</li>
+                <li>Greece</li>
+                <li>Jordan (by far my favorite!)</li>
+            </ul><br>
+        <p>It's mainly been in Europe and a bunch different places in Mexico/Italy, but I want to move more East in 
+            the near future.</p><br>
+        <p>But my heart will always stay in Mexico where my grandparents are from.</p>
+    <h1>Random/weird/potentially cool fun fact: I am ambidextrous!</h1>
 </body>
 </html>
